<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_gravity="center"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center"
    tools:context=".BroadcastReceiverActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@android:color/holo_orange_light"
        android:backgroundTint="@android:color/holo_orange_light"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:hint="@string/type_text"  />

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:shadowColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/start_sending" />

        <Button
        android:id="@+id/btSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/send" />



    <Button
        android:id="@+id/btStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/black"
        android:text="@string/stop_sending" />
</LinearLayout>